--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My React App</title>
+  <link rel="stylesheet" href="%PUBLIC_URL%/index.css" />
+  <base href="/" />
+</head>
+  <!-- <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -13,7 +20,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>React Redux App</title>
     <base href="/" />
-  </head>
+  </head> -->
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
