--- a/public/index.html
+++ b/public/index.html
@@ -17,17 +17,10 @@
     <base href="/" />
   </head>
   
-<body style="background: url('background.png') center / cover no-repeat;"></body>
+<body >
     <section style="margin-top: 22px;">
     </section>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 </body>
 </html>
-
-
-  {# <body></body>
-  
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body> #}
