--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <base href="/" />
   </head>
   
-<body >
+<body style="background: var(--bs-success-text-emphasis);">
     <section style="margin-top: 22px;">
     </section>
     <noscript>You need to enable JavaScript to run this app.</noscript>
